--- a/Salary_analysis.ipynb
+++ b/Salary_analysis.ipynb
@@ -5,7 +5,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import config\n",
+    "import pandas\n",
+    "from sqlalchemy import create_engine\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username = config.username\n",
+    "password = config.password\n",
+    "\n",
+    "engine = create_engine(f'postgresql://{username}:{password}localhost:5432/Employee_SQL_DB')\n",
+    "connection = engine.connect()\n"
+   ]
   }
  ],
  "metadata": {
